updated file paths in HTML files to new “assets” folder

--- a/example/about.html
+++ b/example/about.html
@@ -14,12 +14,12 @@
   <link rel="apple-touch-icon" sizes="72x72" href="../images/apple-touch-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-touch-icon-114x114.png" />
   
-  <link rel="stylesheet" href="../css/reset.css" />
+  <link rel="stylesheet" href="../assets/css/reset.css" />
   <!-- Centurion Framework -->
-  <link rel="stylesheet" href="../css/centurion.css" />
-  <link rel="stylesheet" href="../css/elusive-webfont.css" />
+  <link rel="stylesheet" href="../assets/css/centurion.css" />
+  <!--<link rel="stylesheet" href="../assets/css/elusive-webfont.css" />-->
   <!-- End of Framework -->
-  <link rel="stylesheet" href="../css/custom.css" />
+  <!--<link rel="stylesheet" href="../assets/css/custom.css" />-->
   <!--[if gte IE 9]>
     <style type="text/css">
       .gradient {
@@ -28,7 +28,7 @@
     </style>
   <![endif]-->
   <!--[if lt IE 9]>
-    <script src="../js/modernizr-2.6.2-custom-min.js"></script>
+    <script src="../assets/js/modernizr-2.6.2-custom-min.js"></script>
   <![endif]-->
   
 </head>
@@ -394,8 +394,8 @@
   <!-- End of Footer -->
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/centurion.js"></script>
-  <!--[if lte IE 7]><script src="scripts/lte-ie7.js"></script><![endif]-->
+  <script type="text/javascript" src="../assets/js/centurion.js"></script>
+  <!--[if lte IE 7]><script src="../assets/js/lte-ie7.js"></script><![endif]-->
   
 </body>
 </html>
