--- a/grid.html
+++ b/grid.html
@@ -6,76 +6,16 @@
 <!-- @include _layout-top -->
 	  
 
-<div class="grid-24">
-  <h1>The Grid</h1>
-  <p>This is a page to show how the grid layout functions.</p>
-</div>
+<!-- @include _general-grid -->
+  
 
-
-<section class="calculate">
-
-  <div class="grid-24"></div>
-  
-  <div class="grid-1"></div>
-  <div class="grid-23"></div>
-  
-  <div class="grid-2"></div>
-  <div class="grid-22"></div>
-  
-  <div class="grid-3"></div>
-  <div class="grid-21"></div>
-  
-  <div class="grid-4"></div>
-  <div class="grid-20"></div>
-  
-  <div class="grid-5"></div>
-  <div class="grid-19"></div>
-  
-  <div class="grid-6"></div>
-  <div class="grid-18"></div>
-  
-  <div class="grid-7"></div>
-  <div class="grid-17"></div>
-  
-  <div class="grid-8"></div>
-  <div class="grid-16"></div>
-  
-  <div class="grid-9"></div>
-  <div class="grid-15"></div>
-  
-  <div class="grid-10"></div>
-  <div class="grid-14"></div>
-  
-  <div class="grid-11"></div>
-  <div class="grid-13"></div>
-  
-  <div class="grid-12"></div>
-  <div class="grid-12"></div>
+<!-- @include _nested-grid -->
 
   
-  
-  <div class="grid-24">
-    <h2>Nested Grids</h2>
-  </div>
-  
-  <div class="grid-24">
-    <div class="grid-2"></div>
-    <div class="grid-22"></div>
-  </div>
-  
-  <div class="grid-12">
-    <div class="grid-8"></div>
-    <div class="grid-16"></div>
-  </div>
-  <div class="grid-12">
-    <div class="grid-16"></div>
-    <div class="grid-8"></div>
-  </div>
-  
-</div>
+<!-- @include _center-grid -->
 
-</section>
 
+<!-- @include _push-pull-grid -->
   
   
 <!-- @include _layout-bottom -->
