changed placeholder image, documentation link, and grid code example

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="grid-18">
     <h1>The Framework</h1>
 
-    <img src="http://placehold.it/200x310" alt="" class="lfloat frame visible hide-mobile">
+    <img src="https://placeimg.com/250/320/tech/grayscale" alt="" class="lfloat frame visible hide-mobile">
     <p>Centurion is a intuitive responsive framework that works out of the box with added features to hep build your next web project quickly.</p>
     <p>Centurion is a resposive, media query driven HTML5 and CSS3 framework. It is designed to be used on any website out of the box. Unlilke some other frameworks, Centurion is designed for mobile devices and desktop. Using CSS media queries the Centurion is able to conform to the screen and shift the content as necessary so that the content is not obscured.</p>
     <p>Centurion offers the basic 960 grid with a twist. Using a 12 column container, the framework can size down from 960 to 768, 480, and 320 pixel screen sizes. Centurion does all its work in the browser, and allows for one template to auto-resize to the device without the need to detect devices through either JavaScript or PHP.</p>
@@ -31,25 +31,20 @@
     </ul>
 
     <h2>Documentation</h2>
-    <p>Check out the documentation for Centurion on <a href="http://jhough10.github.com/Centurion/get-started.html">Github</a>.</p>
+    <p>Check out the documentation for Centurion on <a href="http://www.centurionframework.com/documentation.html">Github</a>.</p>
   </div>
 
 
   <div class="grid-12">
     <h2>Code</h2>
-    <pre><code>
-    &lt;div class="container"&gt;<br>
-    &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 alpha"&gt;<br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-    &nbsp;&nbsp;&nbsp; &lt;/div&gt;<br>
-    &nbsp;&nbsp;&nbsp;&lt;div class="grid-33"&gt;<br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-    &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
-    &nbsp;&nbsp;&nbsp;&lt;div class="grid-33 omega"&gt;<br>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-    &nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
-    &lt;/div&gt;
-    </code></pre>
+    <pre><code>&lt;div class="container"&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;div class="grid-16"&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp; &lt;/div&gt;<br>
+&nbsp;&nbsp;&nbsp;&lt;div class="grid-8"&gt;<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+&nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
+&lt;/div&gt;</code></pre>
   </div>
 
 
