partials at root and combined several partials for ease of update

--- a/_partials/_grid/_center-grid.html
+++ b/_partials/_grid/_center-grid.html
@@ -3,6 +3,8 @@
   <h2>Centered Grids</h2>
 </div>
 
+<pre><code class="language-markup">&lt;div class="ctn-grid-2 ctn-grid-center">&lt;/div></code></pre>
+
 <section class="calculate clearfix">
   
   <div class="ctn-grid-2 ctn-grid-center"></div>
