--- a/_partials/_grid/_full-width-grid.html
+++ b/_partials/_grid/_full-width-grid.html
@@ -4,6 +4,7 @@
   <p>Shows how a full-width container would function in relation the normal grid.</p>
 </div>
 
+<pre><code class="language-markup"></code></pre>
 
 <section class="calculate clearfix">
 
@@ -36,6 +37,11 @@
   <h1>Grid Elements with No Margin</h1>
   <p>This is a page to show how the grid layout functions.</p>
 </div>
+
+<pre><code class="language-markup">&lt;div class="ctn-container">
+  &lt;div class="ctn-grid-2 ctn-no-margin">&lt;/div>
+  &lt;div class="ctn-grid-22 ctn-no-margin">&lt;/div>
+&lt;/div></code></pre>
 
 <section class="calculate clearfix">
 
