--- a/_partials/_grid/_general-grid.html
+++ b/_partials/_grid/_general-grid.html
@@ -3,6 +3,23 @@
   <p>This is a page to show how the grid layout functions.</p>
 </div>
 
+<pre><code class="language-markup">&lt;div class="ctn-container">
+  &lt;div class="ctn-grid-2">&lt;/div>
+  &lt;div class="ctn-grid-22">&lt;/div>
+  
+  &lt;div class="ctn-grid-3">&lt;/div>
+  &lt;div class="ctn-grid-21">&lt;/div>
+  
+  &lt;div class="ctn-grid-4">&lt;/div>
+  &lt;div class="ctn-grid-20">&lt;/div>
+  
+  &lt;div class="ctn-grid-5">&lt;/div>
+  &lt;div class="ctn-grid-19">&lt;/div>
+  
+  &lt;div class="ctn-grid-6">&lt;/div>
+  &lt;div class="ctn-grid-18">&lt;/div>
+&lt;/div></code></pre>
+
 
 <section class="calculate clearfix">
 
