--- a/_partials/_grid/_nested-grid.html
+++ b/_partials/_grid/_nested-grid.html
@@ -2,6 +2,18 @@
   <h2>Nested Grids</h2>
 </div>
 
+
+<pre><code class="language-markup">&lt;div class="ctn-container">
+  &lt;div class="ctn-grid-12">
+    &lt;div class="ctn-grid-8">&lt;/div>
+    &lt;div class="ctn-grid-16">&lt;/div>
+  &lt;/div>
+  &lt;div class="ctn-grid-12">
+    &lt;div class="ctn-grid-16">&lt;/div>
+    &lt;div class="ctn-grid-8">&lt;/div>
+  &lt;/div>
+&lt;/div></code></pre>
+
 <section class="calculate clearfix">  
 
   <div class="ctn-grid-24">
