--- a/_partials/_grid/_push-pull-grid.html
+++ b/_partials/_grid/_push-pull-grid.html
@@ -2,6 +2,14 @@
   <h3>Push the Grid</h3>
 </div>
 
+
+<pre><code class="language-markup">&lt;div class="ctn-container">
+  &lt;div class="ctn-grid-6">&lt;/div>
+  &lt;div class="ctn-grid-6 ctn-push-6">&lt;/div>
+  &lt;div class="ctn-grid-6 ctn-push-12">&lt;/div>
+  &lt;div class="ctn-grid-6 ctn-push-18">&lt;/div>
+&lt;/div></code></pre>
+
 <section class="calculate clearfix">  
 
   <div class="ctn-grid-6"></div>
@@ -22,6 +30,13 @@
 <div class="ctn-grid-24">
   <h3>Push and Pull the Grid</h3>
 </div>
+
+<pre><code class="language-markup">&lt;div class="ctn-container">
+  &lt;div class="ctn-grid-8 ctn-push-16">&lt;/div>
+  &lt;div class="ctn-grid-16 ctn-pull-8">&lt;/div>
+  &lt;div class="ctn-grid-16 ctn-pull-8">&lt;/div>
+  &lt;div class="ctn-grid-8 ctn-pull-16">&lt;/div>
+&lt;/div></code></pre>
 
 <section class="calculate clearfix">  
 
