html - author, license, and removed unused stylesheet

--- a/_partials/_layout-bottom.html
+++ b/_partials/_layout-bottom.html
@@ -9,9 +9,8 @@
   <footer>
     <div class="ctn-container">
       <div class="ctn-grid-24">
-        <p><!--##projectName--> was created by <a href="http://www.justinhough.com" title="Justin Hough">Justin Hough</a>. 
-        Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a> 
-        and <a href="http://www.opensource.org/licenses/mit-license.php" rel="license">MIT</a>.</p>
+        <p><!--##projectName--> was created by <a href="<!--##author_url-->" title="<!--##author_name-->"><!--##author_name--></a>. 
+        Licensed under <a href="http://www.gnu.org/licenses/gpl.html" rel="license">GPL</a>.</p>
       </div>
     </div>
   </footer>
@@ -22,7 +21,6 @@
   <script src="js/libs/jquery-migrate-1.2.1.min.js"></script>
   <script src="js/libs/prism.js"></script>
   <link rel="stylesheet" href="js/libs/prism.css" />
-  <!-- <link rel="stylesheet" href="js/libs/prism-okaidia.css" /> -->
   <!-- End of Library -->
   
   <script src="js/centurion.js"></script>
