html - grid text updated to match documentation

--- a/_partials/_grid/_center-grid.html
+++ b/_partials/_grid/_center-grid.html
@@ -1,6 +1,8 @@
-  
 <div class="ctn-grid-24">
   <h2>Centered Grids</h2>
+  
+  <p>Centering grid elements is as easy as adding <code>ctn-grid-center</code> to your grid element. This will evenly space your element in the center of your grid container.</p>
+  
 </div>
 
 <pre><code class="language-markup">&lt;div class="ctn-grid-2 ctn-grid-center">&lt;/div></code></pre>
