--- a/_partials/_grid/_general-grid.html
+++ b/_partials/_grid/_general-grid.html
@@ -1,6 +1,10 @@
 <div class="ctn-grid-24 no-display-grid">
   <h1>The Grid</h1>
-  <p>This is a page to show how the grid layout functions.</p>
+  <p>Originally Centurion was built only a responsive grid, so at its core Centurion is built to be responsive. The grid is built using a Sass mixin, which makes it highly customizable. The only portion of the grid system that uses a pixel width is the container. For desktops the default container is set to <code>1100px</code> wide and is fully fluid below <code>768px</code> for tablets and smartphones.</p>
+  
+  <h2>Basic Structure</h2>
+  
+  <p>Utlizing the grid in your your project requires a container wrapper to set the main size of the area with grid elements inside to divide the space of the content area as needed. For example, if you want to use the full width for a banner that spans the page, then you would specify a <code>ctn-grid-24</code>. 24 columns is the full width of the default grid and is easily divisible in any design pattern. If you want to divide the page in two columns (a main body and a sidebar) you could use a <code>ctn-grid-6</code> and a <code>ctn-grid-18</code>. The number corresponds the amount of columns that the grid will occupy within the container.</p>
 </div>
 
 <pre><code class="language-markup">&lt;div class="ctn-container">
@@ -19,6 +23,8 @@
   &lt;div class="ctn-grid-6">&lt;/div>
   &lt;div class="ctn-grid-18">&lt;/div>
 &lt;/div></code></pre>
+
+<p><strong>Note</strong>: For each row make sure that you elements add up to 24 columns across in order to utilize the full row. However, if you want to center one grid element on each row then you will want to use Centering Grids below.</p>
 
 
 <section class="calculate clearfix">
