--- a/_partials/_grid/_nested-grid.html
+++ b/_partials/_grid/_nested-grid.html
@@ -1,5 +1,10 @@
 <div class="ctn-grid-24">
   <h2>Nested Grids</h2>
+
+  <p>The best part of any grid system is the ability to nest elements within a single grid element to break down the space into smaller, manageable spaces.</p>
+
+  <p>For example, say that you want to have content in a <code>ctn-grid-18</code>, but you also want to add three images with captions side-by-side beneath the main block of text. In order to create this layout will need to put three <code>ctn-grid-8</code> grid elements inside the parent grid element.</p>
+
 </div>
 
 
