layout - minified CSS being referenced

--- a/_partials/_layout-top.html
+++ b/_partials/_layout-top.html
@@ -17,8 +17,12 @@
   <meta name="description" content="<!--##meta_description-->"/>
   
   <!-- Centurion Framework -->
+<!--
   <link rel="stylesheet" href="css/centurion.css">
   <link rel="stylesheet" href="css/custom.css">
+-->
+  <link rel="stylesheet" href="css/minified/centurion.min.css">
+  <link rel="stylesheet" href="css/minified/custom.min.css">
   <!-- End of Framework -->
   
   <!-- GA CODE goes here -->
