--- a/_partials/_home-content.html
+++ b/_partials/_home-content.html
@@ -1,23 +1,22 @@
 <div class="ctn-grid-16">
   <h1>About the Framework</h1>
   
-  <p>Centurion is an intuitive, responsive framework that works out of the box with basic features added to help aid your next web project.</p>
-    
-  <p>Unlike other larger and more prominent web frameworks, Centurion is designed was originally designed for desktop experiences, but has been rebuilt from the ground up to feature to be responsive for mobile, tablet, and desktop experiences. Using CSS3 media queries, Centurion is able to conform easily to any screen and shift the content as necessary (or hide certain elements) to allow for an unobstructed view of the content and elements that matter most for the experience.</p>
-  
-  <p>Centurion offers three basic media breakpoints: 481, 961, and 1100. Even the grid has been optimized to be design friendly with a 24-column grid that is easily divisible for any design project and it even has different columns based on device (6-columns for mobile and 12-columns for tablet). </p>
+  <p><a href="http://badge.fury.io/js/centurion-framework"><img src="https://camo.githubusercontent.com/d73cf939ec7ffc746f32fba14a99073a0ce23249/68747470733a2f2f62616467652e667572792e696f2f6a732f63656e747572696f6e2d6672616d65776f726b2e737667" alt="NPM version" data-canonical-src="https://badge.fury.io/js/centurion-framework.svg" style="max-width:100%;"></a>
+    <a href="http://badge.fury.io/rb/centurion-framework"><img src="https://camo.githubusercontent.com/1c989af65965a78de27d5487a7d8df6ade6bd02a/68747470733a2f2f62616467652e667572792e696f2f72622f63656e747572696f6e2d6672616d65776f726b2e737667" alt="Gem Version" data-canonical-src="https://badge.fury.io/rb/centurion-framework.svg" style="max-width:100%;"></a></p>
 
-  <!-- <h2>Documentation</h2> -->
-  <!-- <p>Full documentation for Centurion can be found on <a href="http://www.centurionframework.com/documentation.html">Github</a>.</p> -->
+  
+  <a href="https://camo.githubusercontent.com/61fded187bd01a851e0ec7d4ac060864f57bca9a/687474703a2f2f7777772e63656e747572696f6e6672616d65776f726b2e636f6d2f67726170686963732f63656e747572696f6e5f3230302e706e67" target="_blank" class="right-float" style="margin: 0 15px;"><img src="https://camo.githubusercontent.com/61fded187bd01a851e0ec7d4ac060864f57bca9a/687474703a2f2f7777772e63656e747572696f6e6672616d65776f726b2e636f6d2f67726170686963732f63656e747572696f6e5f3230302e706e67" alt="image" data-canonical-src="http://www.centurionframework.com/graphics/centurion_200.png" style="max-width:100%;"></a>
+  
+  <p>Centurion is a intuitive framework that offers a responsive grid system out of the box with a few basic features to help setup your next web project easily. Unlike larger and more prominent web frameworks, Centurion doesn't throw everything you don't need into your project and allows for quick customizations using Sass. It is also available as an <a href="https://www.npmjs.com/package/centurion-framework">NPM module</a> or <a href="https://rubygems.org/gems/centurion-framework">RubyGem</a> for those truly custom projects.</p>
+  
+  <p> Centurion offers three basic media breakpoints: 481, 961, and 1100. It was also designed to be design friendly using an easily divisible 24-column based grid that suits most design projects. These columns also adjust to allow for a 12-column view on tablet and a 6-column view on mobile.</p>
 </div>
 
 <div class="ctn-grid-8">  
   <h2>Out of the Box</h2>
   
-  <p>Centurion wasn't meant to be the end of a theme, rather it is the beginning of the next great one. Most of the features exist based on usage and need from the open-source community. Building basic features for typography, tables, and buttons can become tiresome and for a quick web development project you might need the simple features first with the ability to create your own without excessive overrides.</p>
+  <p>We didn't design Centurion to be heavy and with GZIP the entire framework comes in around 6KB. Most of the features built into Centurion were either requests from the open-source community or from general web usage, which is why you will find typography, buttons, tables, badges, and callouts in this framework to name a few.
     
-  <h3>Build for your needs</h3>
-  
-  <p>You can either use the responsive grid at the core of Centurion, or you can extend it with the basic features you need easily with Sass mixins.</p>
+  <p>Either submit a <a href="https://github.com/justinhough/Centurion/issues?q=is%3Aopen+is%3Aissue+label%3A%22feature+request%22">feature request on Github</a> or you can fork and submit a pull request of any new feature that you think Centurion could benefit from.</p>
 
 </div>
