--- a/_partials/_layout-top.html
+++ b/_partials/_layout-top.html
@@ -7,39 +7,41 @@
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  
+
   <link rel="shortcut icon" href="img/favicon.jpg" />
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
-  
+
   <meta name="keywords" content="<!--##meta_keyword-->"/>
   <meta name="description" content="<!--##meta_description-->"/>
-  
+
   <!-- Centurion Framework -->
-<!--
+
   <link rel="stylesheet" href="css/centurion.css">
   <link rel="stylesheet" href="css/custom.css">
--->
+  <!--
   <link rel="stylesheet" href="css/minified/centurion.min.css">
   <link rel="stylesheet" href="css/minified/custom.min.css">
+  -->
   <!-- End of Framework -->
-  
+
   <!-- GA CODE goes here -->
 
 </head>
 <body>
-  
+
 <header>
   <div class="ctn-container">
     <div class="ctn-grid-24">
-      
+
       <h1><!--##projectName--> <small>(<!--##version-->)</small></h1>
       <nav id="main" class="mobile">
         <a href="index.html" class="nav-current">Home</a>
         <a href="resources.html">Resources</a>
+        <a href="forms.html">Forms</a>
       </nav>
-      
+
     </div>
   </div>
 </header>
