--- a/resources.html
+++ b/resources.html
@@ -1,16 +1,18 @@
 <!--##include('_layout-top.html')-->
 
-<h1>Resources</h1>
+<div class="ctn-grid-24">
+  <h1>Resources</h1>
 
-<p>You can <a href="https://github.com/justinhough/Centurion/blob/3.5.3/DOCUMENTATION.md">read the full documentation</a> on the CSS and Sass components on Github</p>
+  <p>You can <a href="https://github.com/justinhough/Centurion/blob/3.5.3/DOCUMENTATION.md">read the full documentation</a> on the CSS and Sass components on Github</p>
 
-<p>If you're worried about browser support we recommend using <a href="https://code.google.com/p/html5shiv/">html5shiv</a> to add fallback for HTML5 or <a href="http://modernizr.com/">Modernizr</a> to provide basic support for CSS3 and other feature detection to keep your design from falling flat, unless you designed it that way.</p>
+  <p>If you're worried about browser support we recommend using <a href="https://code.google.com/p/html5shiv/">html5shiv</a> to add fallback for HTML5 or <a href="http://modernizr.com/">Modernizr</a> to provide basic support for CSS3 and other feature detection to keep your design from falling flat, unless you designed it that way.</p>
 
-<h2>Sass Supported</h2>
+  <h2>Sass Supported</h2>
 
-<p>Centurion is built using vanilla Sass (basically no library dependencies) and comes with some custom Sass Mixins that you can attach to create your own custom blend for your site. Remove what you don't need and move on.</p>
+  <p>Centurion is built using vanilla Sass (basically no library dependencies) and comes with some custom Sass Mixins that you can attach to create your own custom blend for your site. Remove what you don't need and move on.</p>
 
-<hr />
+  <hr />
+</div>
 
 <!-- GRID -->
 <!--##include('_grid/_general-grid.html')-->
